Update training code

--- a/dataset/train_recommendation_model.ipynb
+++ b/dataset/train_recommendation_model.ipynb
@@ -6,14 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense\n",
-    "\n",
+    "import pandas as pd\n",
+    "from keras.layers import Dense\n",
+    "from keras.models import Sequential\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.model_selection import train_test_split"
+    "from tensorflow import keras"
    ]
   },
   {
@@ -22,10 +21,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# raw_db = pd.read_csv('dataset/titan.csv')\n",
-    "# raw_db = pd.read_csv('dataset/hunter.csv')\n",
-    "# raw_db = pd.read_csv('dataset/warlock.csv')\n",
-    "raw_db = pd.read_csv('dataset/common.csv')"
+    "# raw_db = pd.read_csv('titan.csv')\n",
+    "# raw_db = pd.read_csv('hunter.csv')\n",
+    "# raw_db = pd.read_csv('warlock.csv')\n",
+    "raw_db = pd.read_csv('common.csv')"
    ]
   },
   {
@@ -70,7 +69,8 @@
     "model.add(Dense(200, activation=\"relu\", input_dim=3))\n",
     "model.add(Dense(500, activation=\"relu\"))\n",
     "model.add(Dense(300, activation=\"relu\"))\n",
-    "model.add(Dense(2, activation=\"sigmoid\"))"
+    "model.add(Dense(2, activation=\"sigmoid\"))\n",
+    "model.summary()"
    ]
   },
   {
@@ -90,10 +90,10 @@
    "source": [
     "# hist = model.fit(x_train, y_train, batch_size=16, epochs=32, verbose=1, validation_data=(x_test, y_test))\n",
     "hist = model.fit(x_train, y_train, batch_size=16, epochs=32, verbose=1)\n",
-    "# model.save(\"dataset/titan.h5\")\n",
-    "# model.save(\"dataset/hunter.h5\")\n",
-    "# model.save(\"dataset/warlock.h5\")\n",
-    "model.save(\"dataset/common.h5\")"
+    "# model.save(\"titan.h5\")\n",
+    "# model.save(\"hunter.h5\")\n",
+    "# model.save(\"warlock.h5\")\n",
+    "model.save(\"common.h5\")"
    ]
   },
   {
